kubernetes/apps/flux-system/webhooks/app/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.haynesops
spec:
  ingressClassName: external
  rules:
    - host: flux-webhook.haynesops.com
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
